# CPPCudaTransformerX

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.txt  main  requirements.txt
docs/: ARCHITECTURE.md  LICENSE.md  README.md  ROADMAP.md
examples/: DigitRecognizer.h  DigitRecognizer.tpp  DigitRecognizerRunner.cpp  EmbeddingModel.h  EmbeddingModel.tpp  EmbeddingModelRunner.cpp  MultiHeadAttentionModel.h  MultiHeadAttentionModel.tpp  MultiHeadAttentionModelRunner.cpp
examples/run/: DigitRecognizerRunner.cpp  EmbeddingModelRunner.cpp  MultiHeadAttentionModelRunner.cpp
examples/utils/: loadAGNeaws.cpp  loadMNIST.cpp  loadMNIST.h  readUInt32.cpp  readUInt32.h
include/: ActivationFunction.h  BPE.h  DenseLayer.h  Embedding.h  Float16.h  Layer.h  LayerNorm.h  LossFunction.h  MixedPrecisionFloat16.h  MultiHeadAttention.h  Optimizer.h  PositionalEncoder.h  PositionalWiseDenseLayer.h  ResidualBlock.h  Tensor.h  Tokenizer.h
models/: DigitRecognizer.h  DigitRecognizer.tpp  EmbeddingModel.h  EmbeddingModel.tpp  MultiHeadAttentionModel.tpp  Transformer.h  Transformer.tpp
notebooks/: BaseLineDigitRecognation.ipynb  BaseLineEmbedding.ipynb  BaseLineMultiHeadAttention.ipynb  LargeLanguageModel.ipynb
notebooks/.ipynb_checkpoints/: BaseLineDigitRecognation-checkpoint.ipynb  BaseLineDigitRecognition-checkpoint.ipynb
src/: ActivationFunction.tpp  BPE.tpp  DenseLayer.tpp  Embedding.tpp  Float16.tpp  LayerNorm.tpp  LossFunction.tpp  MixedPrecisionFloat16.cpp  MultiHeadAttention.tpp  Optimizer.tpp  PositionalEncoder.tpp  PositionalWiseDenseLayer.tpp  ResidualBlock.tpp  Tensor.cpp  Tensor.tpp  Tokenizer.tpp  generate.cpp  main.cpp  train.cpp
tests/: download_mnist.py  test_activation_function.cpp  test_bpe.cpp  test_dense_layer.cpp  test_embedding.cpp  test_layer_norm.cpp  test_loss_function.cpp  test_mixed_precission_float16.cpp  test_multi_head_attention.cpp  test_optimizer.cpp  test_positional_wise_dense_layer.cpp  test_residual_block.cpp  test_tensor.cpp  test_tokenizer.cpp
utils/: download_mnist.py  loadAGNews.h  loadAGNews.tpp  loadMNIST.h  loadMNIST.tpp  loadVocab.h  loadVocab.tpp  loadWikiText.h  loadWikiText.tpp  main.py  readUint32.h  readUint32.tpp  swapEdian.h  swapEndian.cpp  swapEndian.h  swapEndian.tpp  update_files.py
utils/ag_news/: download_ag_news.py  extract_ag_news.py
utils/mnist/: download_mnist.py  load_data.py
utils/wikitext/: download_wikitext.py  extract_wikitext.py
utils_py/: main.py
utils_py/.ipynb_checkpoints/: main-checkpoint.py
utils_py/ag_news/: download_ag_news.py  extract_ag_news.py
utils_py/mnist/: normalize_data.py  update_files.py
utils_py/vocab/: download_vocab.py  extract_vocab.py
utils_py/wikitext/: download_wikitext.py
